Append test: add read-only and singleton read optimizations
For read-only transactions, we can skip one of the two transactions. For
singleton reads, we can just do a plain read. This allows the append
test to catch stale reads at SERIALIZABLE.

--- a/antithesis/control/Dockerfile
+++ b/antithesis/control/Dockerfile
@@ -9,7 +9,9 @@ ENTRYPOINT java -Djava.awt.headless=true -Xmx8g \
   -jar /opt/jepsen-test/jepsen-test.jar \
   test \
   --antithesis \
-  --time-limit 120 \
   --nodes n1,n2,n3 \
+  --workload append \
   --concurrency 2n \
+  --nemesis partition \
+  --time-limit 60 \
   --serializable
